[gd_scene load_steps=15 format=3 uid="uid://cuoh7pp4dnep"]

[ext_resource type="Script" path="res://Scripts/bat.gd" id="1_7iv6j"]
[ext_resource type="Texture2D" uid="uid://clmpnrgcurmi5" path="res://Assets/bat_enemy.png" id="1_pvcxu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qim0r"]
radius = 13.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_taelm"]
atlas = ExtResource("1_pvcxu")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekbj8"]
atlas = ExtResource("1_pvcxu")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7b72u"]
atlas = ExtResource("1_pvcxu")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_28emy"]
atlas = ExtResource("1_pvcxu")
region = Rect2(96, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgce2"]
atlas = ExtResource("1_pvcxu")
region = Rect2(128, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_th1c3"]
atlas = ExtResource("1_pvcxu")
region = Rect2(96, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rggd0"]
atlas = ExtResource("1_pvcxu")
region = Rect2(128, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dxdy"]
atlas = ExtResource("1_pvcxu")
region = Rect2(160, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nttf6"]
atlas = ExtResource("1_pvcxu")
region = Rect2(192, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d3uc"]
atlas = ExtResource("1_pvcxu")
region = Rect2(224, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_785f7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_taelm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekbj8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b72u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_28emy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgce2")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_th1c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rggd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dxdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nttf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d3uc")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}]

[node name="Bat" type="CharacterBody2D"]
script = ExtResource("1_7iv6j")

[node name="RayCastDown" type="RayCast2D" parent="."]
position = Vector2(-3, 0)
target_position = Vector2(0, 24)

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -24)

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CapsuleShape2D_qim0r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.71051e-20, 3.38813e-21)
scale = Vector2(1.70312, 2.03125)
sprite_frames = SubResource("SpriteFrames_785f7")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.240576

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(64, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-64, 0)

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
